# crop-planner

./: .devcontainer.json  .gitignore  .ruff.toml  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/ISSUE_TEMPLATE/: blank-issue-template.md
.github/workflows/: lint.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/crop/: __init__.py  ai_task.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  crop.py  data.py  manifest.json  openplantbook.py  scripts.py  sensor.py  service.py  services.yaml  todo.py
custom_components/crop/translations/: ca.json  en.json  es.json
custom_components/crop_planner/: __init__.py  calendar.py  config_flow.py  const.py  coordinator.py  crop.py  data.py  manifest.json  openplantbook.py  service.py  services.yaml
custom_components/crop_planner/translations/: es.json
script/: bootstrap  develop  release.sh  setup
script/scaffold/templates/integration/integration/: manifest.json
tests/: __init__.py  conftest.py  test_calendar.py  test_chore_categories.py  test_config_flow.py  test_data.py  test_init.py  test_options_flow.py  test_service.py  test_todo.py
